--- a/parckman/index.html
+++ b/parckman/index.html
@@ -75,6 +75,10 @@
       // Коэффициент масштабирования
       const scaleFactor = 0.4; // 800 / 2000
 
+      // Сдвиг влево на половину ширины и вниз на половину высоты
+      const offsetX = (parkingSpotWidth / 2) * scaleFactor;
+      const offsetY = (parkingSpotHeight / 2) * scaleFactor;
+
       // Координаты парковочных мест (X, Y) в реальных размерах
       const parkingSpots = [
         { x: 361, y: 380 }, { x: 454, y: 380 }, { x: 546, y: 380 }, { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 },
@@ -88,9 +92,9 @@
       ];
 
       parkingSpots.forEach(spot => {
-        // Масштабирование координат
-        const xScaled = spot.x * scaleFactor;
-        const yScaled = spot.y * scaleFactor;
+        // Масштабирование координат и сдвиг
+        const xScaled = spot.x * scaleFactor - offsetX;
+        const yScaled = spot.y * scaleFactor - offsetY;
 
         // Добавление парковочного места
         const parkingSpot = scene.add.image(xScaled, yScaled, 'parking');
