--- a/parckman/index.html
+++ b/parckman/index.html
@@ -91,10 +91,10 @@
         { x: 1094, y: 785 }, { x: 1189, y: 785 }, { x: 1279, y: 785 }, { x: 1371, y: 785 }, { x: 1462, y: 785 }, { x: 1555, y: 785 },
       ];
 
-      // Отзеркаливаем координаты для нижних блоков
+      // Отзеркаливаем координаты для нижних блоков и сдвигаем вверх на высоту одного места
       const lowerParkingSpots = upperParkingSpots.map(spot => ({
         x: spot.x,
-        y: 2000 - spot.y, // Отзеркаливаем относительно нижней границы фона (2000 пикселей)
+        y: 2000 - spot.y - parkingSpotHeight, // Отзеркаливаем и сдвигаем вверх
       }));
 
       // Объединяем верхние и нижние парковочные места
