--- a/parckman/index.html
+++ b/parckman/index.html
@@ -218,10 +218,15 @@
     }
 
     function createDecorativeLayer(scene) {
-      // Добавление декоративных элементов
-      const grass1 = scene.add.image(661, 89, 'grass1').setScale(0.5); // Трава 1
-      const tree1 = scene.add.image(1635, 127, 'tree1').setScale(0.5); // Дерево 1
-      const bush1 = scene.add.image(1716, 298, 'bush1').setScale(0.5); // Куст 1
+      // Масштабирование координат для декоративных элементов
+      const grass1Coords = scaleCoords(661, 89); // Трава 1
+      const tree1Coords = scaleCoords(1635, 127); // Дерево 1
+      const bush1Coords = scaleCoords(1716, 298); // Куст 1
+
+      // Добавление декоративных элементов с масштабированными координатами
+      const grass1 = scene.add.image(grass1Coords.x, grass1Coords.y, 'grass1').setScale(0.5); // Трава 1
+      const tree1 = scene.add.image(tree1Coords.x, tree1Coords.y, 'tree1').setScale(0.5); // Дерево 1
+      const bush1 = scene.add.image(bush1Coords.x, bush1Coords.y, 'bush1').setScale(0.5); // Куст 1
 
       // Установка глубины для декоративных элементов (чтобы они отображались поверх других объектов)
       grass1.setDepth(10);
