--- a/parckman/index.html
+++ b/parckman/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parking Rush</title>
+  <title>Parking Rush - NPC Movement</title>
   <style>
     body, html {
       margin: 0;
@@ -48,208 +48,89 @@
 
     const game = new Phaser.Game(config);
 
-    // Размеры спрайта парковочного места
-    const parkingSpotWidth = 59; // Ширина
-    const parkingSpotHeight = 85; // Высота
+    let npcCar;
+    let isParking = false;
 
-    // Коэффициент масштабирования
-    const scaleFactor = 0.4; // 800 / 2000
-
-    // Сдвиг вправо и вниз для парковочных мест
-    const offsetX = (parkingSpotWidth / 2) * scaleFactor; // Сдвиг вправо
-    const offsetY = (parkingSpotHeight / 2) * scaleFactor; // Сдвиг вниз
-
-    // Дополнительные сдвиги для дорог (вверх и влево)
-    const roadOffsetX = -12; // Сдвиг влево
-    const roadOffsetY = -16; // Сдвиг вверх
-
-    // Функция для масштабирования координат
-    function scaleCoords(x, y, isRoad = false) {
-      const scaledX = x * scaleFactor + offsetX;
-      const scaledY = y * scaleFactor + offsetY;
-
-      // Применяем дополнительные сдвиги для дорог
-      if (isRoad) {
-        return {
-          x: scaledX + roadOffsetX,
-          y: scaledY + roadOffsetY,
-        };
-      }
-
-      return { x: scaledX, y: scaledY };
+    function preload() {
+      // Загрузка изображений
+      this.load.image('npcCar', 'assets/npc_car.png'); // Машина NPC
     }
 
-	function preload() {
-	  // Загрузка изображений
-	  this.load.image('background', 'assets/parking_map.png'); // Фон парковки
-	  this.load.image('entrance', 'assets/entrance.png'); // Въезд
-	  this.load.image('pavilion', 'assets/pavilion.png'); // Павильон
-	  this.load.image('grass1', 'assets/grass1.png'); // Трава 1
-	  this.load.image('tree1', 'assets/tree1.png'); // Дерево 1
-	  this.load.image('bush1', 'assets/bush1.png'); // Куст 1
-	  this.load.image('oil', 'assets/oil.png'); // Масляное пятно
-	}
-
     function create() {
-      // Очистка сцены от всех объектов
-      this.children.each(child => {
-        console.log("Уничтожаем объект:", child);
-        child.destroy();
-      });
+      // Создание NPC машины
+      npcCar = this.physics.add.sprite(400, 700, 'npcCar').setScale(0.5);
+      npcCar.setCollideWorldBounds(true); // NPC не может выезжать за пределы карты
+      npcCar.setOrigin(0.5, 0.5); // Центрируем спрайт
 
-      // Добавление фона
-      const background = this.add.image(400, 400, 'background');
-      background.setDisplaySize(800, 800);
-
-      // Временный код для вывода списка объектов (для отладки)
-      console.log("Объекты на сцене после очистки:");
-      this.children.each(child => {
-        console.log(child);
-      });
-
-      // Добавление невидимых парковочных мест
-      createInvisibleParkingSpots(this);
-
-      // Добавление невидимых дорог
-      createInvisibleRoads(this);
-
-      // Добавление въезда и павильона
-      createEntranceAndPavilion(this);
-
-      // Создание декоративного слоя
-      createDecorativeLayer(this);
-
-      // Временный код для вывода списка объектов после создания
-      console.log("Объекты на сцене после создания:");
-      this.children.each(child => {
-        console.log(child);
-      });
+      // Начальное направление (например, вправо)
+      npcCar.direction = 'right';
+      npcCar.setVelocityX(100); // Начальная скорость
     }
 
     function update() {
-      // Пока ничего не делаем
+      // Поворот машины в зависимости от направления
+      if (npcCar.direction === 'right') {
+        npcCar.rotation = 0; // Поворот вправо
+      } else if (npcCar.direction === 'left') {
+        npcCar.rotation = Math.PI; // Поворот влево
+      } else if (npcCar.direction === 'up') {
+        npcCar.rotation = -Math.PI / 2; // Поворот вверх
+      } else if (npcCar.direction === 'down') {
+        npcCar.rotation = Math.PI / 2; // Поворот вниз
+      }
+
+      // Проверка столкновений с препятствиями
+      if (npcCar.body.blocked.right) {
+        npcCar.direction = 'down'; // Поворот вниз
+        npcCar.setVelocityX(0);
+        npcCar.setVelocityY(100);
+      } else if (npcCar.body.blocked.down) {
+        npcCar.direction = 'left'; // Поворот влево
+        npcCar.setVelocityX(-100);
+        npcCar.setVelocityY(0);
+      } else if (npcCar.body.blocked.left) {
+        npcCar.direction = 'up'; // Поворот вверх
+        npcCar.setVelocityX(0);
+        npcCar.setVelocityY(-100);
+      } else if (npcCar.body.blocked.up) {
+        npcCar.direction = 'right'; // Поворот вправо
+        npcCar.setVelocityX(100);
+        npcCar.setVelocityY(0);
+      }
+
+      // Обработка выхода NPC за пределы экрана
+      if (npcCar.x > 800) {
+        npcCar.x = 0; // Возвращаем NPC в начало, если она ушла за правый край
+      }
+      if (npcCar.y > 800) {
+        npcCar.y = 0; // Возвращаем NPC в начало, если она ушла за нижний край
+      }
+
+      // Запуск цикла движения
+      startNPCMovement();
     }
 
-    function createInvisibleParkingSpots(scene) {
-      // Координаты парковочных мест (X, Y) в реальных размерах (верхние блоки)
-      const upperParkingSpots = [
-        { x: 361, y: 380 }, { x: 454, y: 380 }, { x: 546, y: 380 }, { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 },
-        { x: 361, y: 495 }, { x: 454, y: 495 }, { x: 546, y: 495 }, { x: 641, y: 495 }, { x: 729, y: 495 }, { x: 823, y: 495 },
-        { x: 361, y: 674 }, { x: 454, y: 674 }, { x: 546, y: 674 }, { x: 641, y: 674 }, { x: 729, y: 674 }, { x: 823, y: 674 },
-        { x: 361, y: 785 }, { x: 454, y: 785 }, { x: 546, y: 785 }, { x: 641, y: 785 }, { x: 729, y: 785 }, { x: 823, y: 785 },
-        { x: 1094, y: 380 }, { x: 1189, y: 380 }, { x: 1279, y: 380 }, { x: 1371, y: 380 }, { x: 1462, y: 380 }, { x: 1555, y: 380 },
-        { x: 1094, y: 495 }, { x: 1189, y: 495 }, { x: 1279, y: 495 }, { x: 1371, y: 495 }, { x: 1462, y: 495 }, { x: 1555, y: 495 },
-        { x: 1094, y: 674 }, { x: 1189, y: 674 }, { x: 1279, y: 674 }, { x: 1371, y: 674 }, { x: 1462, y: 674 }, { x: 1555, y: 674 },
-        { x: 1094, y: 785 }, { x: 1189, y: 785 }, { x: 1279, y: 785 }, { x: 1371, y: 785 }, { x: 1462, y: 785 }, { x: 1555, y: 785 },
-      ];
+    function startNPCMovement() {
+      if (!isParking) {
+        // Выезд с парковочного места
+        npcCar.setVelocityX(100); // Начальное движение вправо
+        npcCar.direction = 'right';
+        isParking = true;
+      } else {
+        // Если NPC достиг целевого парковочного места
+        if (npcCar.x > 700 && npcCar.y > 700) {
+          npcCar.setVelocityX(0);
+          npcCar.setVelocityY(0);
+          isParking = false;
 
-      // Отзеркаливаем координаты для нижних блоков и сдвигаем вверх на высоту одного места
-      const lowerParkingSpots = upperParkingSpots.map(spot => ({
-        x: spot.x,
-        y: 2000 - spot.y - parkingSpotHeight, // Отзеркаливаем и сдвигаем вверх
-      }));
-
-      // Объединяем верхние и нижние парковочные места
-      const allParkingSpots = [...upperParkingSpots, ...lowerParkingSpots];
-
-      // Добавляем невидимые парковочные места
-      allParkingSpots.forEach(spot => {
-        const { x, y } = scaleCoords(spot.x, spot.y); // Масштабируем координаты
-        const parkingSpot = scene.add.rectangle(
-          x, y,
-          parkingSpotWidth * scaleFactor, // Масштабируем ширину
-          parkingSpotHeight * scaleFactor, // Масштабируем высоту
-          0x000000, // Цвет (чёрный, но невидимый)
-          0 // Прозрачность (0 = полностью прозрачный)
-        ).setOrigin(0.5);
-
-        // Добавляем физику для парковочного места
-        scene.physics.add.existing(parkingSpot, true); // Статический объект
-      });
+          // Пауза перед новым циклом
+          this.time.delayedCall(2000, () => {
+            npcCar.setPosition(400, 700); // Возвращаем NPC на стартовую позицию
+            startNPCMovement();
+          }, [], this);
+        }
+      }
     }
-
-    function createInvisibleRoads(scene) {
-      // Координаты и размеры дорог
-      const roads = [
-        // Въезд
-        { x: 3 + 252 / 2, y: 893 + 216 / 2, width: 252, height: 216 }, // Центр въезда
-
-        // Левая вертикальная дорога
-        { x: 255 + 104 / 2, y: 236 + 1529 / 2, width: 104, height: 1529 }, // Центр дороги
-
-        // Правая вертикальная дорога
-        { x: 1618 + 120 / 2, y: 237 + 1526 / 2, width: 120, height: 1526 }, // Центр дороги
-
-        // Верхняя горизонтальная дорога
-        { x: 257 + 1485 / 2, y: 234 + 143 / 2, width: 1485, height: 143 }, // Центр дороги
-
-        // Нижняя горизонтальная дорога
-        { x: 259 + 1479 / 2, y: 1622 + 141 / 2, width: 1479, height: 141 }, // Центр дороги
-
-        // Центральная горизонтальная дорога
-        { x: 257 + 1482 / 2, y: 872 + 252 / 2, width: 1482, height: 252 }, // Центр дороги
-
-        // Центральная вертикальная дорога
-        { x: 887 + 203 / 2, y: 236 + 1528 / 2, width: 203, height: 1528 }, // Центр дороги
-      ];
-
-      roads.forEach(road => {
-        const { x, y } = scaleCoords(road.x, road.y, true); // Масштабируем координаты с учётом сдвига
-        const roadRect = scene.add.rectangle(
-          x, y,
-          road.width * scaleFactor, // Масштабируем ширину
-          road.height * scaleFactor, // Масштабируем высоту
-          0x000000, // Цвет (чёрный, но невидимый)
-          0 // Прозрачность (0 = полностью прозрачный)
-        ).setOrigin(0.5);
-
-        // Добавляем физику для дороги
-        scene.physics.add.existing(roadRect, true); // Статический объект
-      });
-    }
-
-    function createEntranceAndPavilion(scene) {
-      // Въезд
-      const { x: entranceX, y: entranceY } = scaleCoords(3 + 252 / 2, 893 + 216 / 2, true); // Центр въезда с учётом сдвига
-      scene.add.image(entranceX, entranceY, 'entrance').setScale(0.5);
-
-      // Павильон
-      const { x: pavilionX, y: pavilionY } = scaleCoords(700, 100); // Масштабируем координаты
-      scene.add.image(pavilionX, pavilionY, 'pavilion').setScale(0.5);
-    }
-
-	function createDecorativeLayer(scene) {
-	  // Переменные для смещения декоративных элементов
-	  const grassOffsetX = 0; // Смещение травы по X
-	  const grassOffsetY = 20; // Смещение травы по Y
-
-	  const treeOffsetX = 45; // Смещение дерева по X
-	  const treeOffsetY = 35; // Смещение дерева по Y
-
-	  const bushOffsetX = 35; // Смещение куста по X
-	  const bushOffsetY = 25; // Смещение куста по Y
-
-	  const oilOffsetX = 15; // Смещение масляного пятна по X
-	  const oilOffsetY = 23; // Смещение масляного пятна по Y
-
-	  // Масштабирование координат для декоративных элементов
-	  const grass1Coords = scaleCoords(661 + grassOffsetX, 89 + grassOffsetY); // Трава 1
-	  const tree1Coords = scaleCoords(1635 + treeOffsetX, 127 + treeOffsetY); // Дерево 1
-	  const bush1Coords = scaleCoords(1716 + bushOffsetX, 298 + bushOffsetY); // Куст 1
-	  const oilCoords = scaleCoords(25 + oilOffsetX, 938 + oilOffsetY); // Масляное пятно
-
-	  // Добавление декоративных элементов с масштабированными координатами
-	  const grass1 = scene.add.image(grass1Coords.x, grass1Coords.y, 'grass1').setScale(0.5); // Трава 1
-	  const tree1 = scene.add.image(tree1Coords.x, tree1Coords.y, 'tree1').setScale(0.5); // Дерево 1
-	  const bush1 = scene.add.image(bush1Coords.x, bush1Coords.y, 'bush1').setScale(0.5); // Куст 1
-	  const oil = scene.add.image(oilCoords.x, oilCoords.y, 'oil').setScale(0.5); // Масляное пятно
-
-	  // Установка глубины для декоративных элементов (чтобы они отображались поверх других объектов)
-	  grass1.setDepth(10);
-	  tree1.setDepth(10);
-	  bush1.setDepth(10);
-	  oil.setDepth(2);
-	}
   </script>
 </head>
 <body>
